# dv-control-node

./: .gitignore  .gitmodules  README.md  scratch.ipynb
Control/: README.md  scratch.ipynb
Control/src/control/: CMakeLists.txt  package.xml
Control/src/control/msg/: Action.msg  Pose.msg
Control/src/control/scripts/: csp.py  mpssc.py  sender.py
src/driverless/: package.xml  setup.py
src/driverless/control/: control_node.py  node_wrapper.py
src/driverless/control/domain/: CubicSpline.py  enums.py  parameters.py  status.py
src/driverless/control/path_planning/: providers.py
src/driverless/control/path_tracking/: model_predictive_speed_and_steer_control.py  plotter.py
src/driverless/integration_test/: test_python_robotics_import.py
src/driverless_msgs/: CMakeLists.txt  package.xml
src/python_robotics/: package.xml  setup.cfg  setup.py
