<package format="3">
  <name>driverless_msgs</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="imvarela17@esei.uvigo.es">Iago Muñoz Varela</maintainer>
  <license>BSD-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <depend>builtin_interfaces</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
